When user submit poll, the result should NOT go on second line. - fixed In surveys, radio buttons are aligned with text. - fixed Survey allows the user to select multiple choices against single question (LTR, RTL) - fixed

--- a/lms/static/sass/xblocks/poll_survey.scss
+++ b/lms/static/sass/xblocks/poll_survey.scss
@@ -71,6 +71,8 @@ body.new-theme {
 
                 .survey-option {
                     position: relative;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
 
                     label {
                         display: inline-grid;
@@ -222,6 +224,7 @@ body.new-theme {
                     }
 
                     .percentage-gauge-container {
+                        width: calc(100% - 100px);
                         .poll-answer-label {
                             font-weight: normal;
                         }
